--- a/css/about.css
+++ b/css/about.css
@@ -1,38 +1,58 @@
-body{
-    margin:0px !important;
+.user-navbar{
+    background-color: #00CED1;
 }
-.page-about{
-    position: absolute;
-    width: 100%;
-    height: 100%;
+.navbar{
+    border-radius: 0px;
 }
-.content{
-    height: 50%;
-    width: 100%;
-    background: #3e8f3e;
+.title{
+    text-align: center;
+    font: 25px Palatino, serif;
+    text-transform: uppercase;
+    color: #ffffff;
+    margin-top: 10px;
 }
-.back-nav{
-    float:left;
-    height: 100%;
-    width:5%;
-    background:#B9CAFF
+.menu{
+    margin-top:2px;
 }
-.user-photo-box{
-    margin: 0 5%;
-    width: 20%;
-    background: #e38d13;
+.user-page{
+    background-color: #FFEFD5;
 }
 .user-photo{
-    width: 80%;
-    height: 80%;
+    padding: 10px 0px;
+    text-align: center;
 }
-.header{
-    float: right;
-    margin-right: 50%;
-    background-color: #a94442;
+.user-info{
+    padding: 10px 0px;
 }
-.user-description{
-    float: right;
-    margin-rigth: 50%;
-    background-color: #dca7a7;
+.user-name{
+    color: #31b0d5;
+    font: 30px Palatino, serif;
+}
+.user-status{
+    color: #BC8F8F;
+    font: 20px Palatino, serif;
+
+}
+.user-location{
+    font: 18px Palatino, serif;
+    color: #A9A9A9;
+}
+.user-vita-title{
+    margin: 10px 0px;
+    color: #F08080;
+    font: 20px Palatino, serif;
+}
+.user-vita{
+    color: #F08080;
+    font: 18px Palatino, serif;
+    word-wrap:break-word;
+    margin: 0px 15px;
+}
+.display-inline-block{
+    display: inline-block;
+}
+@media (max-width: 991px) {
+    .user-info{
+        text-align: center;
+    }
 }
