create steel about page

--- a/css/about.css
+++ b/css/about.css
@@ -43,7 +43,7 @@
     font: 20px Palatino, serif;
 }
 .user-vita{
-    color: #F08080;
+    color: #A9A9A9;
     font: 18px Palatino, serif;
     word-wrap:break-word;
     margin: 0px 15px;
